# vorbis-encoder-rs

./: Cargo.toml  build.rs
examples/: Cargo.toml
examples/src/: main.rs
libvorbis-encoder/: vorbis-encoder.c
src/: lib.rs
