[package]
name = "vorbis-encoder"
description = "Interface for the libvorbis-encoder library"
license = "MIT"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
build = "build.rs"
links = "vorbis-encoder"

[dependencies]
ogg-sys = "*"
vorbis-sys = "*"
libc = "*"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
