[package]
name = "vorbis-encoder"
description = "Interface for the libvorbis-encoder library"
license = "MIT"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
build = "build.rs"
links = "vorbis-encoder"

[dependencies]
ogg-sys = "0.0.9"
vorbis-sys = "0.0.8"
libc = "0.2.17"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
