[package]
name = "vorbis-encoder"
description = "Interface for the libvorbis-encoder library"
license = "MIT"
version = "0.1.5"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
build = "build.rs"
links = "vorbis-encoder"
edition = "2021"

[dependencies]
ogg-sys = "0.0.9"
vorbis-sys = "0.1.0"
libc = "0.2.65"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
